syntax = "proto3";

package changelog;

import "google/api/annotations.proto";
import "openapi/v3/annotations.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";
import "types/types.proto";

option go_package = "github.com/duc-cnzj/mars/api/v4/changelog;changelog";

message ShowRequest {
  int32 project_id   = 1 [(validate.rules).int32.gt = 0, (google.api.field_behavior) = REQUIRED];
  bool  only_changed = 2;
}

message ShowResponse {
  repeated types.ChangelogModel items = 1;
}

service Changelog {
  rpc Show(ShowRequest) returns (ShowResponse) {
    option (google.api.http)                                               = {
      get: "/api/projects/{project_id}/changelogs"
    };

    option (openapi.v3.operation) = {
      summary: "查看项目修改的版本差异",
    };
  }
}
